--- a/scrab-rest/pom.xml
+++ b/scrab-rest/pom.xml
@@ -7,6 +7,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>scrab-rest</artifactId>
+	<name>Scrab REST Module</name>
 
 	<dependencies>
 		<dependency>
