--- a/scrab-service/pom.xml
+++ b/scrab-service/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.coopnex</groupId>
     <artifactId>scrab</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1</version>
   </parent>
   <artifactId>scrab-service</artifactId>
   <name>Scrab Service Module</name>
@@ -12,7 +12,7 @@
   	<dependency>
 			<groupId>com.coopnex</groupId>
 			<artifactId>scrab-data</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.1</version>
 		</dependency>
   </dependencies>
 </project>
