--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.coopnex</groupId>
 	<artifactId>scrab</artifactId>
-	<version>0.1</version>
+	<version>0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Scrab Project</name>
 
@@ -10,8 +10,7 @@
 		<url>https://github.com/paternoy/scrab</url>
 		<connection>scm:git:git://github.com/paternoy/scrab.git</connection>
 		<developerConnection>scm:git:git@github.com:paternoy/scrab.git</developerConnection>
-	  <tag>scrab-0.1</tag>
-  </scm>
+	</scm>
 
 	<properties>
 		<spring.version>3.2.2.RELEASE</spring.version>
@@ -22,6 +21,25 @@
 		<module>scrab-service</module>
 		<module>scrab-rest</module>
 	</modules>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.coopnex</groupId>
+				<artifactId>scrab-data</artifactId>
+				<version>${version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.coopnex</groupId>
+				<artifactId>scrab-rest</artifactId>
+				<version>${version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.coopnex</groupId>
+				<artifactId>scrab-service</artifactId>
+				<version>${version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<build>
 		<plugins>
 			<plugin>
