--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.coopnex</groupId>
 	<artifactId>scrab</artifactId>
-	<version>0.2</version>
+	<version>0.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Scrab Project</name>
 
@@ -10,7 +10,7 @@
 		<url>https://github.com/paternoy/scrab</url>
 		<connection>scm:git:git://github.com/paternoy/scrab.git</connection>
 		<developerConnection>scm:git:git@github.com:paternoy/scrab.git</developerConnection>
-	  <tag>scrab-0.2</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<properties>
