--- a/scrab-data/pom.xml
+++ b/scrab-data/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.coopnex</groupId>
     <artifactId>scrab</artifactId>
-    <version>0.2</version>
+    <version>0.3-SNAPSHOT</version>
   </parent>
   <artifactId>scrab-data</artifactId>
   <name>Scrab Data Module</name>
